# SimpleLLama

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
simple/include/base/: allocator.h  allocator_cpu.h  allocator_cuda.h  base.h  buffer.h  cuda_config.h  tiktoken.h
simple/include/model/: config.h  model.h  raw_model_data.h
simple/include/op/: add.h  embedding.h  encode.h  operator.h  rmsnorm.h
simple/include/sampler/: argmax_sampler.h  sampler.h
simple/include/tensor/: tensor.h
simple/src/base/: allocator_cpu.cpp  alocator_cuda.cpp  base.cpp  buffer.cpp  unicode.cpp
simple/src/model/: model.cpp  raw_model_data.cpp
simple/src/op/: add.cpp  embedding.cpp  encode.cpp  operator.cpp  rmsnorm.cpp
simple/src/op/kernels/: kernels_interface.cpp  kernels_interface.h
simple/src/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cuh  embedding_kernel.cu  embedding_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh
simple/src/sampler/: argmax_sampler.cpp
simple/src/tensor/: tensor.cpp
